Write to registry and removed maintenance welcome.
1) Removed the "Maintenance Welcome Dialog", so when users run the MSI
after installation they don't get a welcome dialog that looks similar to
a new install, they'll go straight to the Change/Repair/Remove dialog.
2) Installer writes data to the registry and reads it into the edit
fields if data is already in the registry (for the Change dialog in the
future).

--- a/SetupMSI/CustomMaintenanceTypeDlg.wxs
+++ b/SetupMSI/CustomMaintenanceTypeDlg.wxs
@@ -41,7 +41,7 @@
                 <Control Id="RemoveDisabledText" Type="Text" X="60" Y="191" Width="280" Height="20" NoPrefix="yes" Text="!(loc.MaintenanceTypeDlgRemoveDisabledText)" Hidden="yes">
                     <Condition Action="show">ARPNOREMOVE</Condition>
                 </Control>
-                <Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Text="!(loc.WixUIBack)" />
+                <Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Disabled="yes" Text="!(loc.WixUIBack)" />
                 <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Disabled="yes" Text="!(loc.WixUINext)" />
                 <Control Id="Cancel" Type="PushButton" X="304" Y="243" Width="56" Height="17" Cancel="yes" Text="!(loc.WixUICancel)" />
                 <Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="!(loc.MaintenanceTypeDlgBannerBitmap)" />
@@ -50,6 +50,10 @@
                 <Control Id="Title" Type="Text" X="15" Y="6" Width="340" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.MaintenanceTypeDlgTitle)" />
                 <Control Id="Description" Type="Text" X="25" Y="23" Width="340" Height="20" Transparent="yes" NoPrefix="yes" Text="!(loc.MaintenanceTypeDlgDescription)" />
             </Dialog>
+
+            <InstallUISequence>
+                <Show Dialog="CustomMaintenanceTypeDlg" Before="ProgressDlg" Overridable="yes">Installed AND NOT RESUME AND NOT Preselected AND NOT PATCH</Show>
+            </InstallUISequence>
         </UI>
     </Fragment>
 </Wix>
