--- a/SetupMSI/CustomRegistrarDlg.wxs
+++ b/SetupMSI/CustomRegistrarDlg.wxs
@@ -70,19 +70,44 @@
                 </Control>
                 
                 <!-- Buttons -->
-                <Control Id="Validate" Type="PushButton" X="20" Y="202" Width="56" Height="17" Default="yes" Text="!(loc.RegistrarDlgValidate)">
+                <Control Id="Validate" Type="PushButton" X="20" Y="202" Width="56" Height="17" Disabled="yes" Default="yes" Text="!(loc.RegistrarDlgValidate)">
                     <Condition Action="enable"><![CDATA[REGISTRAR_REGISTRAR <> ""]]></Condition>
-                    <Condition Action="disable">REGISTRAR_REGISTRAR = ""</Condition>
                     <Publish Property="RegistrarValidated" Value="0" Order="1">1</Publish>
                     <Publish Property="_RegistrarValidated" Value="0" Order="2">1</Publish>
                     <Publish Event="DoAction" Value="ValidateCredentials" Order="3">1</Publish>
                     <Publish Property="RegistrarValidated" Value="[_RegistrarValidated]" Order="4">1</Publish>
                 </Control>
-                <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Text="!(loc.WixUINext)">
-                    <Condition Action="disable"><![CDATA[RegistrarValidated <> "1"]]></Condition>
+                <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Hidden="yes" Text="!(loc.WixUINext)">
+                    <Condition Action="show"><![CDATA[WixUI_InstallMode <> "Change"]]></Condition>
                     <Condition Action="enable">RegistrarValidated = "1"</Condition>
+                    <Condition Action="disable"><![CDATA[RegistrarValidated <> "1"]]></Condition>
                 </Control>
-                <Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Text="!(loc.WixUIBack)" />
+                <Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Hidden="yes" Text="!(loc.WixUIBack)">
+                    <Condition Action="show"><![CDATA[WixUI_InstallMode <> "Change"]]></Condition>
+                </Control>                
+                <Control Id="Change" Type="PushButton" ElevationShield="yes" X="212" Y="243" Width="80" Height="17" Hidden="yes" Text="!(loc.VerifyReadyDlgChange)">
+                    <Condition Action="show">WixUI_InstallMode = "Change" AND ALLUSERS AND (ADDLOCAL OR REMOVE)</Condition>
+                    <Condition Action="enable">RegistrarValidated = "1"</Condition>
+                    <Condition Action="disable"><![CDATA[RegistrarValidated <> "1"]]></Condition>
+                    <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
+                    <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
+                    <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
+                    <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
+                    <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
+                </Control>
+                <Control Id="ChangeNoShield" Type="PushButton" ElevationShield="no" X="212" Y="243" Width="80" Height="17" Hidden="yes" Text="!(loc.VerifyReadyDlgChange)">
+                    <Condition Action="show">WixUI_InstallMode = "Change" AND (NOT ALLUSERS OR (NOT ADDLOCAL AND NOT REMOVE))</Condition>
+                    <Condition Action="enable">RegistrarValidated = "1"</Condition>
+                    <Condition Action="disable"><![CDATA[RegistrarValidated <> "1"]]></Condition>
+                    <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
+                    <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
+                    <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
+                    <Publish Event="EnableRollback" Value="False">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
+                    <Publish Event="SpawnDialog" Value="OutOfDiskDlg">(OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 1) OR (OutOfDiskSpace = 1 AND PROMPTROLLBACKCOST="F")</Publish>
+                </Control>
+                <Control Id="ChangeBack" Type="PushButton" X="156" Y="243" Width="56" Height="17" Hidden="yes" Text="!(loc.WixUIBack)">
+                    <Condition Action="show">WixUI_InstallMode = "Change"</Condition>
+                </Control>                
                 <Control Id="Cancel" Type="PushButton" X="304" Y="243" Width="56" Height="17" Cancel="yes" Text="!(loc.WixUICancel)" />
             </Dialog>
         </UI>
