--- a/SetupMSI/CustomRegistrarDlg.wxs
+++ b/SetupMSI/CustomRegistrarDlg.wxs
@@ -89,6 +89,8 @@
                     <Condition Action="show">WixUI_InstallMode = "Change" AND ALLUSERS AND (ADDLOCAL OR REMOVE)</Condition>
                     <Condition Action="enable">RegistrarValidated = "1"</Condition>
                     <Condition Action="disable"><![CDATA[RegistrarValidated <> "1"]]></Condition>
+                    <Publish Event="ReinstallMode" Value="amu"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
+                    <Publish Event="Reinstall" Value="Registry"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
                     <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
                     <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
                     <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
@@ -99,6 +101,8 @@
                     <Condition Action="show">WixUI_InstallMode = "Change" AND (NOT ALLUSERS OR (NOT ADDLOCAL AND NOT REMOVE))</Condition>
                     <Condition Action="enable">RegistrarValidated = "1"</Condition>
                     <Condition Action="disable"><![CDATA[RegistrarValidated <> "1"]]></Condition>
+                    <Publish Event="ReinstallMode" Value="amu"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
+                    <Publish Event="Reinstall" Value="Registry"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
                     <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
                     <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
                     <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
