--- a/SetupMSI/Product.wxs
+++ b/SetupMSI/Product.wxs
@@ -12,15 +12,14 @@
 -->
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <?include Definitions.wxi ?>
-	<Product Id="$(var.GuidProduct)" Name="!(loc.ProductName) $(var.VersionNumber)" Language="!(loc.LANG)"
+    <Product Id="$(var.GuidProduct)" Name="!(loc.ProductName) $(var.VersionNumber)" Language="!(loc.LANG)"
              Version="$(var.VersionNumber)" Manufacturer="Robpol86" UpgradeCode="$(var.GuidUpgrade)">
-		<Package Id="$(var.GuidPackage)" InstallerVersion="301" Compressed="yes" InstallScope="perMachine"
+        <Package Id="$(var.GuidPackage)" InstallerVersion="301" Compressed="yes" InstallScope="perMachine"
                  Keywords="!(loc.Keywords)" Description="!(loc.Description)" Comments="!(loc.Comments)" />
         <MediaTemplate EmbedCab="yes" />
         <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-		<Feature Id="ProductFeature" Title="UnofficialDDNS" Level="1">
-			<ComponentGroupRef Id="ProductComponents" />
-		</Feature>
+        <Feature Id="Files" Title="Files"><ComponentGroupRef Id="Files" /></Feature>
+        <Feature Id="Registry" Title="Registry"><ComponentGroupRef Id="Registry" /></Feature>
         <UIRef Id="CustomDialogSet" />
 
         <!-- Properties and Variables. -->
@@ -42,19 +41,19 @@
         <WixVariable Id="WixUILicenseRtf" Value="LICENSE.rtf" />
         <WixVariable Id="WixUIBannerBmp" Value="bannrbmp.bmp" />
         <WixVariable Id="WixUIDialogBmp" Value="dlgbmp.bmp" />
-	</Product>
+    </Product>
 
-	<Fragment>
-		<Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="ProgramFilesFolder">
-				<Directory Id="INSTALLDIR" Name="UnofficialDDNS" />
-			</Directory>
-		</Directory>
-	</Fragment>
+    <Fragment>
+        <Directory Id="TARGETDIR" Name="SourceDir">
+            <Directory Id="ProgramFilesFolder">
+                <Directory Id="INSTALLDIR" Name="UnofficialDDNS" />
+            </Directory>
+        </Directory>
+    </Fragment>
 
-	<Fragment>
-		<ComponentGroup Id="ProductComponents" Directory="INSTALLDIR">
-			<Component Id="MainExe" Guid="$(var.GuidMainExe)">
+    <Fragment>
+        <ComponentGroup Id="Files" Directory="INSTALLDIR">
+            <Component Id="MainExe" Guid="$(var.GuidMainExe)">
                 <File Id="MainExe" Checksum="yes" KeyPath="yes"
                       Source="..\UnofficialDDNS\bin\$(var.Configuration)\UnofficialDDNS.exe" />
             </Component>
@@ -65,15 +64,16 @@
             <Component Id="JSONnetDll" Guid="$(var.GuidJSONnetDll)">
                 <File Id="JSONnetDll" Checksum="yes" KeyPath="yes"
                       Source="..\UDDNSQuery\bin\$(var.Configuration)\Newtonsoft.Json.dll" />
-			</Component>
-            <Component Id="RegistryEntries" Guid="$(var.GuidRegistryEntries)">
-                <RegistryKey Root="HKLM" Key="SOFTWARE\UnofficialDDNS" Action="createAndRemoveOnUninstall">
-                    <RegistryValue Type="string" Name="Registrar" Value="[REGISTRAR_REGISTRAR]" />
-                    <RegistryValue Type="string" Name="Username" Value="[REGISTRAR_USER]" />
-                    <RegistryValue Type="string" Name="ApiToken" Value="[REGISTRAR_TOKEN]" />
-                    <RegistryValue Type="string" Name="Domain" Value="[REGISTRAR_DOMAIN]" />
-                </RegistryKey>
             </Component>
-		</ComponentGroup>
-	</Fragment>
+        </ComponentGroup>
+        <ComponentGroup Id="Registry" Directory="INSTALLDIR">
+            <Component Id="RegistryEntries" Guid="$(var.GuidRegistryEntries)">
+                <RegistryKey Root="HKLM" Key="SOFTWARE\UnofficialDDNS" Action="createAndRemoveOnUninstall" />
+                <Registry Root="HKLM" Key="SOFTWARE\UnofficialDDNS" Type="string" Name="Registrar" Value="[REGISTRAR_REGISTRAR]" />
+                <Registry Root="HKLM" Key="SOFTWARE\UnofficialDDNS" Type="string" Name="Username" Value="[REGISTRAR_USER]" />
+                <Registry Root="HKLM" Key="SOFTWARE\UnofficialDDNS" Type="string" Name="ApiToken" Value="[REGISTRAR_TOKEN]" />
+                <Registry Root="HKLM" Key="SOFTWARE\UnofficialDDNS" Type="string" Name="Domain" Value="[REGISTRAR_DOMAIN]" />
+            </Component>
+        </ComponentGroup>
+    </Fragment>
 </Wix>
