Service is running, though feature incomplete.
1) Installer installs and starts the service.
2) Added interval and debug registry values.
3) Rewrite LogSingleton now that I know what I'm doing in C#. Eliminated
unnecessary eventLog designer.
4) Moved polling thread method into UnofficialDDNS.cs. Made it a thread
delegate and a static method.
5) Eliminated ReadRegistry.cs and used a much simpler approach.
6) Implemented cancellationtoken in thread.
7) Eliminated CustomExceptions.cs/QueryAPI[NameDotCom].cs since they are
in UDDNSQuery now.
8) Also eliminated Strings resource since they are in UDDNSQuery now.

--- a/SetupMSI/CustomRegistrarDlg.wxs
+++ b/SetupMSI/CustomRegistrarDlg.wxs
@@ -90,7 +90,7 @@
                     <Condition Action="enable">RegistrarValidated = "1"</Condition>
                     <Condition Action="disable"><![CDATA[RegistrarValidated <> "1"]]></Condition>
                     <Publish Event="ReinstallMode" Value="amu"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-                    <Publish Event="Reinstall" Value="Registry"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
+                    <Publish Event="Reinstall" Value="Registry,Service"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
                     <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
                     <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
                     <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
@@ -102,7 +102,7 @@
                     <Condition Action="enable">RegistrarValidated = "1"</Condition>
                     <Condition Action="disable"><![CDATA[RegistrarValidated <> "1"]]></Condition>
                     <Publish Event="ReinstallMode" Value="amu"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
-                    <Publish Event="Reinstall" Value="Registry"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
+                    <Publish Event="Reinstall" Value="Registry,Service"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
                     <Publish Event="EndDialog" Value="Return"><![CDATA[OutOfDiskSpace <> 1]]></Publish>
                     <Publish Event="SpawnDialog" Value="OutOfRbDiskDlg">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND (PROMPTROLLBACKCOST="P" OR NOT PROMPTROLLBACKCOST)</Publish>
                     <Publish Event="EndDialog" Value="Return">OutOfDiskSpace = 1 AND OutOfNoRbDiskSpace = 0 AND PROMPTROLLBACKCOST="D"</Publish>
