Switched to HttpClient.
1) Updated DLL paths in Product.wxs to be more uniform. Makes it easy to
add debug files for testing and I only need to reference the
UnofficialDDNS project.
2) Ditched HttpWebRequest and migrated to HttpClient, much better.
Actually supports CancellationToken! Slightly less code too.
3) Slightly improved LogSingleton since it was logging too fast. Event
ID is now a chronological counter.
4) Fixed InvalidOperationException when user cancels the TaskDialog and
working thread calling Close() afterwards.

--- a/SetupMSI/Product.wxs
+++ b/SetupMSI/Product.wxs
@@ -53,10 +53,10 @@
     <Fragment>
         <ComponentGroup Id="Files" Directory="INSTALLDIR">
             <Component Id="QueryDLL" Guid="$(var.GuidQueryDLL)">
-                <File Id="QueryDLL" Checksum="yes" KeyPath="yes" Source="$(var.UDDNSQuery.TargetPath)" />
+                <File Id="QueryDLL" Checksum="yes" KeyPath="yes" Source="$(var.UnofficialDDNS.TargetDir)\UDDNSQuery.dll" />
             </Component>
             <Component Id="JSONnetDll" Guid="$(var.GuidJSONnetDll)">
-                <File Id="JSONnetDll" Checksum="yes" KeyPath="yes" Source="$(var.UDDNSQuery.TargetDir)\Newtonsoft.Json.dll" />
+                <File Id="JSONnetDll" Checksum="yes" KeyPath="yes" Source="$(var.UnofficialDDNS.TargetDir)\Newtonsoft.Json.dll" />
             </Component>
         </ComponentGroup>
         <ComponentGroup Id="Registry" Directory="INSTALLDIR">
