--- a/SetupMSI/Product.wxs
+++ b/SetupMSI/Product.wxs
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
+  <copyright file="Product.wxs" company="Robpol86">
+    Copyright (c) 2013, Robpol86
+    This software is made available under the terms of the MIT License that can
+    be found in the LICENSE.rtf file.
+  </copyright>
+  
     Todo:
         * Test:
         ** Everythign with combos 32/64bit, xp, vista, 7, 8, 2003, 2003r2, 2008, 2008r2, 2012.
         ** Admin user, user with admin powers, normal user.
 -->
+
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <?include Definitions.wxi ?>
     <Product Id="$(var.GuidProduct)" Name="$(var.AssemblyProduct) $(var.VersionNumber)" Language="!(loc.LANG)"
